--- a/.github/workflows/BuildWheels.yml
+++ b/.github/workflows/BuildWheels.yml
@@ -20,11 +20,9 @@ jobs:
           python -m pip install --upgrade pip wheel
           mkdir -p vendor/wheels
 
-          # Pin a compatible, modern set and include manimpango.
-          # (We avoid pycairo wheels; we’ll apt-get python3-cairo at runtime.)
+          # Only Python packages that have manylinux wheels
           pip download --only-binary=:all: --dest vendor/wheels \
             "manim==0.19.0" \
-            "manimpango==0.6.0" \
             "plotly==5.24.1" \
             "kaleido==0.2.1" \
             "vpython==7.6.5" \
@@ -33,7 +31,6 @@ jobs:
 
           echo "== wheels =="
           ls -al vendor/wheels
-
 
       - name: Upload wheels
         uses: actions/upload-artifact@v4
