--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -195,9 +195,16 @@ jobs:
       - name: Build shotlist (beats)
         env:
           SERIES: ${{ matrix.series }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          VIS_GEN_MODEL: ${{ env.VIS_GEN_MODEL }} # optional: if your script reads this
         run: |
           set -e
+          if [ -z "$OPENAI_API_KEY" ]; then
+            echo "::error::OPENAI_API_KEY is missing (set it in repo Settings → Secrets and variables → Actions)"
+            exit 1
+          fi
           python generator/make_shotlist.py --series "${SERIES}"
+
       
       - name: Debug assets before routing
         env:
